# tsetlin

./: Cargo.toml  LICENSE  README.md
src/: automaton.rs  clause.rs  lib.rs  machine.rs
