[package]
name = "tsetlin"
version = "0.1.0"
edition = "2021"
description = "Tsetlin Machine implementation in Rust"
license = "MIT"
authors = ["A.Shakhmatov dev@shakhmatov.com>"]
repository = "https://github.com/shkmv/tsetlin"
documentation = ""
readme = "README.md"
keywords = ["machine-learning", "tsetlin", "logic", "interpretable"]
categories = ["algorithms", "science"]

[dependencies]
ndarray = "0.15"
rand = "0.8"

[dev-dependencies]
approx = "0.5"
